# learnedcache

./: .gitignore  CLAUDE.md  NEWSPEC.md  README.md  export_model_for_bpf.py  gen2_parsing.ipynb  gen3_parsing.ipynb  gen4_parsing copy.ipynb  gen4_parsing.ipynb  gen4_parsing_ranker.ipynb  gen5_pairwise_ranker.ipynb  hitmiss.ipynb  main.py  pairwise_ranker.py  parsing.ipynb  pyproject.toml
evict_classifier/: __init__.py  __main__.py  cli.py  export.py  loading.py  models.py  plots.py  preprocess.py  sampling.py  simulate.py  train.py
evict_classifier/tests/: conftest.py  helpers.py  test_export.py  test_loading.py  test_sampling.py  test_simulate.py  test_train_smoke.py
learnedcache/: __init__.py  __main__.py  activations.py  binary_loading.py  cli.py  core.py  helpers.py  layers.py  loading.py  models.py  preprocess.py
notebooks/: copyfiles_eval_analysis.ipynb  initial_parsing.ipynb  latency_analysis.ipynb  model_metrics_comparison.ipynb  mongo_eval_analysis.ipynb  openfiles_eval_analysis.ipynb  pairwise_ranker_vis_mongo.ipynb  pairwise_ranker_vis_randomread.ipynb  pairwise_ranker_vis_varmail.ipynb  randomread_eval_analysis.ipynb  varmail_eval_analysis.ipynb  webproxy_eval_analysis.ipynb  webserver_eval_analysis.ipynb
notebooks-v2/: binary_log_analysis.ipynb
outputs-final/copyfiles/: discretizer.pkl  eval_report.txt  model.keras  model_weights.json
outputs-final/fileserver/: discretizer.pkl  (+3 more)
tests/: test_core_pairwise.py  test_core_supervised.py  test_export_contract.py  test_loading_pairs.py
visualizations/: BT_ranker.gv  ebpf.gv  guard.c  model_loading.gv
(+73 files in other folders)
