[project]
name = "learnedcache"
version = "0.1.0"
description = "Learned cache eviction policy training and export tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.13.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.20.0",
    "typer>=0.21.1",
]

[project.scripts]
learnedcache = "learnedcache.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
